feat: support for body as io.Reader
